fix: apply filters button overflow

--- a/src/styles/products/filter.css
+++ b/src/styles/products/filter.css
@@ -62,7 +62,7 @@
   }
   .filter-apply {
     margin-top: 20px;
-    width: 100%;
+    width: 60%;
     align-self: center;
   }
   
